--- a/AddOn/App.config
+++ b/AddOn/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="AddOn.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
@@ -7,4 +12,23 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <AddOn.Properties.Settings>
+      <setting name="Top" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Left" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Height" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Width" serializeAs="String">
+        <value>-1</value>
+      </setting>
+      <setting name="Maximized" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </AddOn.Properties.Settings>
+  </userSettings>
 </configuration>
